fix: Fix command line parsing options